# duplicate-evaluator

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml
duplicate_evaluator/: __init__.py  config.py  main.py
duplicate_evaluator/agent/: __init__.py  graph.py  llm_client.py  nodes.py  prompts.py
duplicate_evaluator/api/: websocket.py
duplicate_evaluator/api/routes/: execute.py  report.py  scan.py  thumbnail.py  tree.py  video.py
duplicate_evaluator/models/: __init__.py  file_entry.py  state.py
duplicate_evaluator/services/: __init__.py  executor.py  reporter.py  scanner.py  thumbnail.py
duplicate_evaluator/web/: app.js  index.html  style.css
tests/: test_api_persistence.py  test_executor.py  test_reporter.py  test_scanner.py
