[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duplicate-evaluator"
version = "0.1.0"
description = "Media duplicate evaluator with local LLM agent and web dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Media Manager" }]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    # LangGraph + LangChain
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    # Config & models
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    # CLI / logging
    "rich>=13.7.0",
    "click>=8.1.7",
    # Utilities
    "python-multipart>=0.0.9",
    "humanize>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
duplicate-evaluator = "duplicate_evaluator.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["duplicate_evaluator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
